# ad-refkit

./: .gitignore  LICENSE  README.md  README_ja.md
assets/cad/SC1602AWWB_holder/: sc1602_socket.FCStd  sc1602_socket.gcode  sc1602_socket.stl
assets/cad/base_chassis/: README.md  robocar_base.FCStd  robocar_base.FCStd1  robocar_base.step  robocar_base.stl  robocar_base2.step  robocar_middle.FCStd  robocar_middle.FCStd1  robocar_middle.step
assets/cad/stick/: stick.FCStd  stick.gcode  stick.stl
assets/patch/: dot.config  dot.config.patch  dot.config20201.patch  linux-xlnx-v2019.1-zybo-z7-builddeb.diff  zynq-zybo-z7.dts
docs/: README.md
docs/sec1/: index.md  index_ja.md
docs/sec2/: index.md  index_ja.md
docs/sec3/: index.md  index_ja.md
docs/sec4/: index.md  index_ja.md
docs/sec5/: index.md  index_ja.md
zybo/BOOT_FS/: uEnv.txt  uImage  zynq-zybo-z7.dtb  zynq-zybo-z7.dts
zybo/BOOT_FS/bootbin_src/: build.bif  fsbl.elf  hardware.bit
zybo/ROOT_FS/: init.sh  init20201.sh
zybo/ROOT_FS/app/ad-sample/: CMakeLists.txt
zybo/ROOT_FS/app/ad-sample/data/HWController/: param.yaml  param.yaml.2020_04  param.yaml.2020_11
zybo/ROOT_FS/app/ad-sample/data/Handler/: param.yaml  param.yaml.2020_04  param.yaml.2020_11
zybo/ROOT_FS/app/ad-sample/data/LineTracer/: param.yaml
zybo/ROOT_FS/app/ad-sample/include/: BirdEyeImg.hpp  HandlerHelper.hpp
zybo/ROOT_FS/app/ad-sample/src/: main.cpp  main.h
zybo/ROOT_FS/app/ad-sample/src/ad/: Handler.cpp  Handler.h
zybo/ROOT_FS/app/ad-sample/src/ad/HWController/ButtonController/: ButtonController.cpp  ButtonController.h
zybo/ROOT_FS/app/ad-sample/src/ad/HWController/MotorController/: MotorController.cpp  MotorController.h
zybo/ROOT_FS/app/ad-sample/src/ad/HWController/PcamController/: PcamController.cpp  PcamController.h
zybo/ROOT_FS/app/ad-sample/src/ad/HWController/PcamController/PcamImageCorrector/: PcamImageCorrector.cpp  PcamImageCorrector.h
zybo/ROOT_FS/app/ad-sample/src/ad/HWController/WebcamController/: WebcamController.cpp  WebcamController.h
zybo/ROOT_FS/app/ad-sample/src/ad/LineTracer/: LineTracer.cpp  LineTracer.h
zybo/ROOT_FS/app/ad-sample/src/ad/WOCalculator/: WOCalculator.cpp  WOCalculator.h
zybo/ROOT_FS/app/make-calibration-param/: CMakeLists.txt
zybo/ROOT_FS/app/make-homography-params/: make-homography-params.py
zybo/ROOT_FS/app/motor-test/: CMakeLists.txt
zybo/ROOT_FS/app/motor-test-websocket/: CMakeLists.txt  README.md
zybo/ROOT_FS/app/pcam-test/: CMakeLists.txt
zybo/ROOT_FS/app/pcam-test-websocket/: CMakeLists.txt  README.md
zybo/ROOT_FS/app/pcam-test-websocket/python/: index.html  server.py
zybo/ROOT_FS/app/pcam-test-websocket/src/: main.cpp
zybo/ROOT_FS/app/take-pcam-image/: CMakeLists.txt
zybo/ROOT_FS/app/webcam-test/: CMakeLists.txt
zybo/ROOT_FS/driver/v4l2/: v4l2_20201.patch
zybo/ROOT_FS/dts/: btn-input.dts  i2c.dts  motor-gpio.dts  preimproc.dts  v4l2.dts
zybo/ROOT_FS/lib/: build_all.sh
zybo/ROOT_FS/lib/control/: CMakeLists.txt
zybo/ROOT_FS/package/: linux-libc-dev_4.19.0-xilinx-3_armhf.deb  linux-libc-dev_4.19.0-xilinx-4_armhf.deb  linux-libc-dev_4.19.0-xilinx-8_armhf.deb
zybo/vivado/script/: build_linux.sh  build_linux20201.sh  build_rootfs.sh  build_rootfs20201.sh  create_bitstream_bin.sh  create_bitstream_bin_20201.sh  create_bsp.tcl  create_bsp_vitis.tcl  create_prj.tcl  export_xsa.tcl  fpga-bit2bin.py  generate_hls_ip.tcl  setup_bd.sh  setup_bd_20201.sh  update20201.patch
zybo/vivado/xdc/: ZyboZ7_A.xdc  timing.xdc
(+40 files in other folders)
